Fri Dec  6 19:08:48 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (atomic_sub_nounderflow): not 0 but val itself.

Fri Dec  6 18:37:11 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_alloc, Init_heap): initialize
	  oldmalloc_increase_limit at Init_heap.

	  rb_objspace_alloc() is not called on some platforms.

Fri Dec  6 18:33:39 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (garbage_collect_body): bug fix.
	  initialize after recording.

Fri Dec  6 17:49:46 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (atomic_sub_nounderflow): added to simplify atomic sub with
	  care about underflow.

	* gc.c (objspace_malloc_increase): use it.

Fri Dec  6 17:10:44 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (rb_get_kwargs): get keyword argument values from an
	  option hash, not only checking keys.

	* dir.c (dir_initialize): use rb_get_kwargs.

	* gc.c (gc_start_internal): ditto.

Fri Dec  6 16:47:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-brace-to-do-end): split single line block.

	* misc/ruby-mode.el (ruby-do-end-to-brace): shrink single line block
	  to one line.

Fri Dec  6 16:16:30 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_start_internal): do not use rb_gc_start() and rb_gc().

Fri Dec  6 15:24:30 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_start_internal, rb_gc): do not need
	  heap_pages_free_unused_pages() here.
	  It was done in after_sweep().

	* gc.c (rb_gc): The reason is now GPR_FLAG_CAPI.

Fri Dec  6 14:05:19 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (gc_start_internal): GC.start() now accepts two optional
	  keyword arguments. These can be used to disable full_mark (minor
	  mark only) or disable immediate_sweep (use lazy sweep). These new
	  options are useful for benchmarking GC behavior, or performing minor
	  GC out-of-band.
	* test/ruby/test_gc.rb (class TestGc): tests for new options.

Fri Dec  6 11:51:28 2013  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
